# spaghetti

./: README.md  and.lua  input_ks  ks.lua  main.cpp  meson.build  meson.options  run.sh  spaghetti.lua  ternary.lua  test.lua
examples/: and.lua  ks.lua  ternary.lua  test.lua  test32.lua  tpt_runner.lua
spaghetti/: bitx.lua  block.lua  build.lua  check.lua  graph.lua  id_store.lua  init.lua  luainterface.cpp  main.cpp  meson.build  misc.lua  optimize.cpp  optimize.hpp  plot.lua  priority_queue.lua  strict.lua  unigate.lua  user_node.lua  value_unused_.lua
